--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,9 @@
 name: lint
-on: [pull-request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 jobs:
   check:
     runs-on: ubuntu-latest
