--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^16.4.3",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
+    "esbuild": "^0.15.9",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.0.6",
