--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,9 +1,11 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*.ts"],
+  "include": ["src/index.ts"],
   "exclude": ["node_modules", "src/**/*.test.ts"],
   "compilerOptions": {
     "declaration": true,
+    "declarationDir": "dist/types",
+    "emitDeclarationOnly": true,
     "removeComments": true
   }
 }
