--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kemuridama/aes-cmac",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A TypesScript implementation of the AES-CMAC algorithm (NIST 800-38B / RFC 4493).",
   "repository": {
     "type": "git",
@@ -9,7 +9,9 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
-  "files": ["dist/"],
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "test": "jest",
     "clean": "rm -rf dist",
